2015-04-13  Per Bothner  <per@bothner.com>

	* Q2.java (getLexer): No longer set defaultCallContention
	to CALL_WITH_CONSUMER.
	* CompileMisc.java: Minor cleaning up.

2015-04-12  Per Bothner  <per@bothner.com>

	* CompileMisc.java: New file.
	(optimizeSimpleApply): New temporary flag - false for now.
	(validateQ2Apply): Inline Q2Apply - but only if optimizeSimpleApply.
	* Makefile.am: Update accordingly.
	* Q2Apply.java (q2Apply): Set validate property.

	* Q2.java (createReadTable): Handle ':' and '@' as in Kawa-Schemee.
	* Q2Read.java (readIndentCommand): Add call to handlePostfix,
	so colon notation works.

2015-04-06  Per Bothner  <per@bothner.com>

	* Operator.java (SLASH): Fix copy+paste error.

	* Q2Apply.java (q2Apply):  Make final, so it can be compiled as literal.

2014-05-07  Per Bothner  <per@bothner.com>

	* Q2Translator.java (applyFunction): New method.
	(makeApply): Remove method.

2013-11-26  Per Bothner  <per@bothner.com>

	* Q2Apply.java (apply): Use Values.writeValues.  This makes
	SRFI-108 and SRFI-109 literals work in Q2.

2013-08-25  Per Bothner  <per@bothner.com>

	* Q2.lang (createReadTable): Update ReaderDispatch.create call.

2012-09-18  Per Bothner  <per@bothner.com>

	* Q2Read.java: Make a bit more robust for erroneous input.

2011-07-11  Per Bothner  <per@bothner.com>

	* Q2Read.java (readIndentCommand): Use updated LispReader API.

2011-04-03  Per Bothner  <per@bothner.com>

	* Q2Translator.java (isApplyFunction): New method.

	* Q2Translator.java (makeApply): Make return type more precise.

2011-03-18  Per Bothner  <per@bothner.com>

	* Q2.java (getName): New method.

2011-01-19  Per Bothner  <per@bothner.com>

	* Q2.java (makeBody): Remove method.
	(appendBodyValues): New method.
	* Q2Translator.java: Change to extend SchemeCompilation.

2011-01-17  Per Bothner  <per@bothner.com>

	* Q2.java (getCompilationClass): New method.
	(getCompilation): Removed method.
	(makeApply): Moved method ...