@@ -1,5 +1,7 @@
 2015-04-13  Per Bothner  <per@bothner.com>
 
+	* indent1.q2: Use '!' operator for local definitions.
+
 	* function1.q2: Remove unneeded parens.
 
 2013-11-26  Per Bothner  <per@bothner.com>
